WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
200161
WebSockets: workers never use the platform WebSockets path
https://bugs.webkit.org/show_bug.cgi?id=200161
Summary
WebSockets: workers never use the platform WebSockets path
Carlos Garcia Campos
Reported
2019-07-26 03:41:53 PDT
A WebCore::WebSocketChannel is created unconditionally in WorkerThreadableWebSocketChannel::Peer.
Attachments
Patch
(5.01 KB, patch)
2019-07-26 03:44 PDT
,
Carlos Garcia Campos
mcatanzaro
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2019-07-26 03:44:34 PDT
Created
attachment 374960
[details]
Patch
Alexey Proskuryakov
Comment 2
2019-07-26 23:56:49 PDT
Related a couple bugs that this will hopefully fix.
Carlos Garcia Campos
Comment 3
2019-07-29 02:11:37 PDT
Committed
r247902
: <
https://trac.webkit.org/changeset/247902
>
Radar WebKit Bug Importer
Comment 4
2019-07-29 02:13:58 PDT
<
rdar://problem/53653192
>
Michael Catanzaro
Comment 5
2019-07-29 04:31:32 PDT
I don't think this is related to
bug #199906
since that's a Safari bug report and Safari releases are not using the new CFNet WebSockets yet. This could only fix problems in the new codepath, not the old one. Also
bug #193636
predates the new codepath by a lot. Thanks for looking for possibly-related bugs though!
Alexey Proskuryakov
Comment 6
2019-07-29 09:18:24 PDT
The problem in
bug 199906
is that WebSockets in service workers attempt to use in-process loading instead of Networking process. This patch doesn't fix that, but I think that the nature of the issue is similar enough for someone working on that to be aware of this too.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug