WebSockets: workers never use the platform WebSockets path https://bugs.webkit.org/show_bug.cgi?id=200161

Reviewed by Michael Catanzaro.

A WebCore::WebSocketChannel is created unconditionally in WorkerThreadableWebSocketChannel::Peer.

* Modules/websockets/ThreadableWebSocketChannel.cpp:
(WebCore::ThreadableWebSocketChannel::create): New create method that receives a Document& and creates the
WebSocket channel checking the runtime enabled features to decide.
* Modules/websockets/ThreadableWebSocketChannel.h:
* Modules/websockets/WorkerThreadableWebSocketChannel.cpp:
(WebCore::WorkerThreadableWebSocketChannel::Peer::Peer): Use ThreadableWebSocketChannel::create().

Canonical link: https://commits.webkit.org/214018@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247902 268f45cc-cd09-0410-ab3c-d52691b4dbfc